<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_gridmap_costmap_plugin</name>
  <version>1.0.0</version>
  <description>Run-time plugin for Costmap2D, which construct occupancy grid based on grid_map</description>
  <maintainer email="sadergachev@edu.hse.ru">Stepan Dergachev</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>nav2_common</depend>
  <depend>nav2_core</depend>
  <depend>nav2_util</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>tf2</depend>
  <depend>grid_map</depend>

  <export>
    <costmap_2d plugin="${prefix}/gridmap_layer.xml" />
    <build_type>ament_cmake</build_type>
  </export>

</package>
